# tw_alpha_scraper

./: .env.example  .gitignore  README.md  config.example.json  config.json  local_login.py  manual_add.py  monitor.py  pyproject.toml  requirements.txt  setup.py  vps_login_stealth.py
deploy/systemd/: tw_alpha_scraper.service
tests/: test_config.py  test_permissions.py  test_service.py  test_storage.py
tw_alpha_scraper/: __init__.py  accounts.py  bot.py  cli.py  config.py  logging_utils.py  models.py  notifications.py  permissions.py  service.py  storage.py  twitter.py
